Download movies and video format check
- Now the name of the selected movie is displayed.
- Movie direct download link added below of selected movie.
- Incompatible video formats checking added. If not compatible video format found, a message is shown to user.
- Code reduction and subtle improvements with project structure.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,6 +8,7 @@ body{background-image:url("../img/texture.png");}
 .list_controller_container{margin:auto;width:50%;}
 header{font-size:30px;}
 .center{text-align:center;}
+footer{margin-top: 18px;font-size: 14px;}
 @media only screen and (max-width:976px){.list_container{border-radius:5px;padding:20px;}
  .list_controller_container{margin:auto;width:75%;}
 }
