--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,11 +3,11 @@
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     color: white;
+    padding: 0;
+    margin: 0;
 }
 
-header {
-    text-align: center;
-}
+
 
 .title {
     font-size: 60px;
@@ -18,10 +18,12 @@ body {
 }
 
 footer {
-    margin-bottom: 20px;
-    margin-top: 18px;
     font-size: 14px;
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 /* width */
@@ -42,6 +44,10 @@ footer {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+
+header {
+    text-align: center;
 }
 
 /* SEARCH */
@@ -73,9 +79,8 @@ footer {
 .movie_list_box {
     background-color: rgb(255, 255, 255, 0.1);
     border-radius: 25px;
+    height: calc(100vh - 171px);
     margin: 0px 10% 0px 10%;
-    padding: 20px;
-    height: 700px;
     overflow-y: auto;
     display: flex;
     justify-content: space-evenly;
@@ -89,6 +94,16 @@ footer {
 
 .movie_link:hover {
     background-color: #5f819b;
+}
+
+/* RESPONSIVE HEIGHT */
+@media only screen and (max-height:317px) {
+    .title {
+        font-size: 25px;
+    }
+    .movie_list_box {
+        height: calc(100vh - 127px);
+    }
 }
 
 /* RESPONSIVE WIDTH */
@@ -119,13 +134,6 @@ footer {
 
     .movie_link {
         margin-bottom: 10px;
-    }
-}
-
-@media screen and (max-width:496px) {
-    body {
-        margin: 0;
-        padding: 0;
     }
 }
 
@@ -183,90 +191,5 @@ footer {
 
     footer {
         font-size: 11px;
-    }
-}
-
-/* RESPONSIVE HEIGHT */
-@media only screen and (max-height:951px) {
-    .movie_list_box {
-        height: 600px;
-    }
-}
-
-@media only screen and (max-height:854px) {
-    .movie_list_box {
-        height: 550px;
-    }
-}
-
-@media only screen and (max-height:799px) {
-    .movie_list_box {
-        height: 500px;
-    }
-}
-
-@media only screen and (max-height:754px) {
-    .movie_list_box {
-        height: 450px;
-    }
-}
-
-@media only screen and (max-height:701px) {
-    .movie_list_box {
-        height: 400px;
-    }
-}
-
-@media only screen and (max-height:651px) {
-    .movie_list_box {
-        height: 360px;
-    }
-}
-
-@media only screen and (max-height:608px) {
-    .movie_list_box {
-        height: 300px;
-    }
-}
-
-@media only screen and (max-height:570px) {
-    .movie_list_box {
-        height: 300px;
-    }
-}
-
-@media only screen and (max-height:548px) {
-    .movie_list_box {
-        height: 250px;
-    }
-}
-
-@media only screen and (max-height:498px) {
-    .movie_list_box {
-        height: 200px;
-    }
-}
-
-@media only screen and (max-height:448px) {
-    .movie_list_box {
-        height: 150px;
-    }
-}
-
-@media only screen and (max-height:397px) {
-    .movie_list_box {
-        height: 100px;
-    }
-}
-
-@media only screen and (max-height:348px) {
-    .movie_list_box {
-        height: 50px;
-    }
-}
-
-@media only screen and (max-height:317px) {
-    .title {
-        font-size: 25px;
     }
 }
